# RSHub

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Makefile  docker-compose.yml  pyproject.toml
docs/: architecture.md  setup.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentTrace.tsx  ChatInterface.tsx  Message.tsx  Sidebar.tsx  SourcePanel.tsx  WelcomeScreen.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
src/: config.py  observability.py
src/agents/: critic.py  graph.py  planner.py  prompts.py  retriever_agent.py  state.py  synthesizer.py
src/api/: main.py
src/api/middleware/: rate_limit.py
src/api/routes/: chat.py  health.py
src/cache/: semantic_cache.py
src/evaluation/: evaluator.py  test_set.json
src/ingestion/: chunker.py  embedder.py  indexer.py  run.py
src/retrieval/: reranker.py  searcher.py
src/scraper/: change_detector.py  matsne.py  models.py  rs_ge.py  scheduler.py
tests/: conftest.py  test_change_detector.py  test_chunker.py  test_semantic_cache.py  test_synthesizer.py
