[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rshub"
version = "0.1.0"
description = "Multi-agent RAG system for Georgian tax consultation"
requires-python = ">=3.11"
dependencies = [
    # Anthropic
    "anthropic>=0.40.0",
    # LangGraph
    "langgraph>=0.2.0,<0.4.0",
    # Embeddings and reranking
    "FlagEmbedding>=1.3.0",
    "torch>=2.1.0",
    "numpy>=1.26.0",
    # Vector DB
    "qdrant-client>=1.12.0",
    # Cache / broker
    "redis>=5.0.0",
    # Scraping
    "playwright>=1.48.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Scheduler
    "apscheduler>=3.10.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    # Observability
    "langfuse>=2.60.0",
    # Utils
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]
eval = [
    "ragas>=0.2.0",
    "datasets>=3.0.0",
    "pandas>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
